# auto_slides

./: README.md  auto_slides.py  example_writing.tex  is_this_paragraph_good.py  pyproject.toml
example/: basic_html.md
