[tool.poetry]
name = "auto-slides"
version = "0.1.0"
description = ""
authors = ["John Horton <john.joseph.horton@gmail.com>"]
license = "MIT License"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
edsl = "^0.1.4"
typer = "^0.9.0"

[tool.poetry.group.dev.dependencies]
pandoc = "^2.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
